--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -39,6 +39,7 @@
     name: "{{item}}"
     state: present
     update_cache: true
+    force: yes
   loop:
     - docker-ce=5:26.1.2-1~ubuntu.22.04~jammy
     - docker-compose=1.29.2-1
